Solved minor mobile padding/layout issue; added secure payments icons

--- a/source/Css/_footer.scss
+++ b/source/Css/_footer.scss
@@ -79,12 +79,5 @@
                 }
             }
         }
-        *[class].footer3 {
-            table {
-                td {
-                    padding: 30px 10px !important;
-                }
-            }
-        }
     }
 }
